// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea.vue renders OXD Textarea 1`] = `
<div class="oxd-content-editable-wrapper oxd-textarea oxd-textarea--active oxd-textarea--resize-vertical" label="Textarea">
  <!-- <textarea
      autocomplete="off"
      autocorrect="off"
      autocapitalize="off"
      spellcheck="false"
      :class="classes"
      :style="style"
      :value="modelValue"
      @focus="onFocus"
      @blur="onBlur"
      @input="onInput"
    /> -->
  <div class="oxd-content-editable-div" contenteditable="true"><span class="oxd-textarea-placeholder">asdasd</span></div>
</div>
`;

exports[`Textarea.vue should renders OXD Textarea with custom color 1`] = `
<div class="oxd-content-editable-wrapper oxd-textarea oxd-textarea--active oxd-textarea--resize-vertical" style="background-color: aliceblue;" label="Textarea">
  <!-- <textarea
      autocomplete="off"
      autocorrect="off"
      autocapitalize="off"
      spellcheck="false"
      :class="classes"
      :style="style"
      :value="modelValue"
      @focus="onFocus"
      @blur="onBlur"
      @input="onInput"
    /> -->
  <div class="oxd-content-editable-div" contenteditable="true"><span class="oxd-textarea-placeholder">asdasd</span></div>
</div>
`;

exports[`Textarea.vue should renders OXD Textarea with error 1`] = `
<div class="oxd-content-editable-wrapper oxd-textarea oxd-textarea--active oxd-textarea--error oxd-textarea--resize-vertical" label="Textarea">
  <!-- <textarea
      autocomplete="off"
      autocorrect="off"
      autocapitalize="off"
      spellcheck="false"
      :class="classes"
      :style="style"
      :value="modelValue"
      @focus="onFocus"
      @blur="onBlur"
      @input="onInput"
    /> -->
  <div class="oxd-content-editable-div" contenteditable="true"><span class="oxd-textarea-placeholder">asdasd</span></div>
</div>
`;
